@@ -1,3 +1,8 @@
+2009-04-28  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/39879
+	* gfortran.dg/alloc_comp_assign_10.f90: New test.
+
 2009-04-28  Ben Elliston  <bje@au.ibm.com>
 
 	PR c++/35652
